<resources>
    <string name="app_name">SchoolApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">SchoolChap</string>
    <string name="confirm_btn">Confirm</string>
    <string name="welcome_to">Welcome to</string>
    <string name="school_chap">SchoolChap</string>
    <string name="school_bottmTxt">Making school feel alive</string>
    <string name="get_started">Get Started</string>
    <string name="terms">Terms</string>
    <string name="school_bottmTxt1">connecting parents and teachers in more</string>
    <string name="school_bottmTxt2">friendly manner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="roll_no">Roll No</string>
    <string name="name">Name</string>
    <string name="fathers_name">Fathers Name</string>
    <string name="mothers_name">Mothers Name</string>
    <string name="fathers_no">Fathers Mobile Number</string>
    <string name="mothers_no">Mothers Mobile Number</string>
    <string name="save_btn">Save</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="attendance">Attendance</string>
    <string name="profile">Profile</string>
    <string name="events_feed">Events Feed</string>
    <string name="classes">Classes</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="show_attendance">Show Attendance</string>
    <string name="child_name">Child\'s Name</string>
    <string name="teacher_class">Class</string>
    <string name="school">School</string>
    <string name="present_today">Present-Today</string>
    <string name="show_past_attendance">Show Past Attendance</string>
    <string name="present">Present</string>
    <string name="calendar">Calendar</string>

    <string name="font_textstyle">futuramedium.ttf</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="homework">Homework</string>
</resources>
