<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#0099ff"
    tools:context=".MainActivity">
    <item
        android:id="@+id/classes"
        android:orderInCategory="100"
        android:title="@string/classes"
        app:showAsAction="never" />
    <item
        android:id="@+id/take_attendance"
        android:orderInCategory="100"
        android:title="@string/take_attendance"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_attendance"
        android:orderInCategory="100"
        android:title="@string/show_attendance"
        app:showAsAction="never" />
    <item
        android:id="@+id/homework"
        android:orderInCategory="100"
        android:title="@string/homework"
        app:showAsAction="never" />
</menu>