<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <View
            android:layout_width="2dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:background="#cc00ff" />

        <TextView
            android:id="@+id/termsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/terms"
            android:textColor="#a8a8ff"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:text="@string/welcome_to"
        android:textColor="#5555ff"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/schoolchapTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/school_chap"
        android:textColor="#9966ff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/get_started_btn_bg"
        android:text="@string/get_started"
        android:textColor="#99ffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/school_bottmTxt"
        android:textColor="#dc4bff"
        android:textSize="23sp" />

</LinearLayout>