<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:clickable="false">

    <LinearLayout
        android:id="@+id/yourChildLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:visibility="gone" />

        <com.tresflex.schoolapp.helper.MyTextView
            android:id="@+id/childName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1.2"
            android:text="@string/child_name"
            android:textColor="@color/childNameTxtColor"
            android:textSize="17sp"
            customfontdemo:fontName="@string/font_textstyle" />

        <com.tresflex.schoolapp.helper.MyTextView
            android:id="@+id/teacher_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:text="@string/teacher_class"
            android:textColor="@color/childNameTxtColor"
            android:textSize="17sp"
            customfontdemo:fontName="@string/font_textstyle" />

        <com.tresflex.schoolapp.helper.MyTextView
            android:id="@+id/school"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="0.6"
            android:text="@string/school"
            android:textColor="@color/childNameTxtColor"
            android:textSize="17sp"
            customfontdemo:fontName="@string/font_textstyle" />

        <com.tresflex.schoolapp.helper.MyTextView
            android:id="@+id/present_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1.3"
            android:text="@string/present_today"
            android:textColor="@color/childNameTxtColor"
            android:textSize="17sp"
            customfontdemo:fontName="@string/font_textstyle" />

    </LinearLayout>

    <View
        android:id="@+id/viewName"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/yourChildLayout"
        android:layout_marginTop="10dp"
        android:background="@color/viewColor" />

    <ListView
        android:id="@+id/yourChildListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/viewName1"
        android:layout_below="@+id/viewName"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:visibility="visible"
        android:divider="@color/viewColor"
        android:dividerHeight="1dp"/>

    <View
        android:id="@+id/viewName1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/pastAttendanceBtn"
        android:background="@color/childViewbg"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/pastAttendanceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/get_started_btn_blue_bg"
        android:text="@string/show_past_attendance"
        android:onClick="showPastAttendance"/>
</RelativeLayout>