<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:id="@+id/studentList"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/yourChildLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titleBarColor"
        android:gravity="center"
        android:orientation="horizontal">

        <com.tresflex.schoolapp.helper.MyTextView
            android:id="@+id/rollNotxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/roll_no"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            customfontdemo:fontName="@string/font_textstyle" />

        <com.tresflex.schoolapp.helper.MyTextView
            android:id="@+id/nameTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            customfontdemo:fontName="@string/font_textstyle" />

        <com.tresflex.schoolapp.helper.MyTextView
            android:id="@+id/presentTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/present"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            customfontdemo:fontName="@string/font_textstyle" />
    </LinearLayout>

    <ListView
        android:id="@+id/takeAttendanceListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/takeAttendanceSaveBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/yourChildLayout"
        android:divider="@color/viewColor"
        android:dividerHeight="0.4dp" />

    <Button
        android:id="@+id/takeAttendanceSaveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/save_btn_bg"
        android:gravity="center"
        android:text="@string/save_btn"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"/>

    <com.tresflex.schoolapp.helper.MyTextView
        android:id="@+id/alertText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="New Text"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:visibility="gone"
        customfontdemo:fontName="@string/font_textstyle" />
</RelativeLayout>